=======
Changes
=======

The **signac-dashboard** package follows `semantic versioning <https://semver.org/>`_.

Version 0.2
===========

[0.2.4] -- 2019-05-23
---------------------

Fixed
+++++
- Made streamed video files seekable.
- Long words in card titles will now wrap.
- Increased size of search bar.
- Submitted search queries populate the search bar even after errors.

[0.2.3] -- 2019-05-08
---------------------

Added
+++++
- Method for clearing dashboard and project caches.

Changed
+++++++
- Disabled $where operations in search queries by default, see :ref:`dashboard-security`.

[0.2.2] -- 2019-04-25
---------------------

Fixed
+++++
- Resolved issue with enabling/disabling modules.
- Long words in card content will now wrap.

[0.2.1] -- 2019-04-24
---------------------

Fixed
+++++
- Corrected PyPI deployment.

[0.2.0] -- 2019-04-24
---------------------

Added
+++++
- New modules: DocumentEditor, FlowStatus, TextDisplay.
- New examples: cli, custom-modules, document-editor, flow-status, plots.
- The default job sorter uses natural sorting for numbers via natsort.

Changed
+++++++
- Improved API documentation, especially for modules.
- Unified module asset/route registration into one ``register`` method.
- The Notes module can be used with any job document key.

Fixed
+++++
- Corrected error in VideoViewer when no poster was provided.
- ImageViewer/VideoViewer match files in job workspace subdirectories.
- Files can now be retrieved from job workspace subdirectories.
- Corrected pagination error.

Removed
+++++++
- The signac project document and user session are no longer used to store
  module settings. The dashboard user script is the single source for
  all configuration besides command line arguments.
- Job labels have been removed and replaced with the FlowStatus module.

Version 0.1
===========

[0.1.6] -- 2018-10-09
---------------------

Changed
+++++++
- Updated layouts for bulma 0.7.1.

Fixed
+++++